# mkp224o

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  Dockerfile  GNUmakefile.in  Makefile  Makefile.in  OPTIMISATION.txt  README.md  README.txt  autoall.sh  autogen.sh  base16.h  base16_from.c  base16_to.c  base32.h  base32_from.c  base32_to.c  base64.h  base64_from.c  base64_to.c  calcest.c  common.h  configure.ac  constants.h  cpucount.c  cpucount.h  filters.h  filters_common.inc.h  filters_inc.inc.h  filters_main.inc.h  filters_worker.inc.h  headers.h  hex.h  ifilter_bitsum.h  ioutil.c  ioutil.h  keccak.c  keccak.h  (+20 more)
.github/workflows/: docker-publish.yml
contrib/docker/: .dockerignore  Dockerfile  README.md
contrib/release-scripts/: README.md  release.sh  sign.sh
contrib/vagrant/: Vagrantfile
contrib/winbuild/: .gitignore  buildwin.sh
ed25519/: ed25519.h  ed25519_impl_post.h  ed25519_impl_pre.h
ed25519/amd64-51-30k/: choose_t.S  consts.S  crypto_sign.h  ed25519.h  fe25519.h  fe25519_freeze.S  fe25519_mul.S  fe25519_nsquare.S  fe25519_square.S  ge25519.h  ge25519_add_p1p1.S  ge25519_base_niels_smalltables.data  ge25519_base_slide_multiples.data  ge25519_batchpack.c  ge25519_dbl_p1p1.S  ge25519_double_scalarmult.c  ge25519_nielsadd2.S  ge25519_nielsadd_p1p1.S  ge25519_p1p1_to_p2.S  ge25519_p1p1_to_p3.S  ge25519_p1p1_to_pniels.S  ge25519_pnielsadd_p1p1.S  heap_rootreplaced.S  heap_rootreplaced_1limb.S  heap_rootreplaced_2limbs.S  heap_rootreplaced_3limbs.S  hram.h  index_heap.h  keypair.c  randombytes.h  sc25519.h  sc25519_add.S  sc25519_barrett.S  sc25519_lt.S  sc25519_mul.c  sc25519_sub_nored.S  sign.c  ull4_mul.S
ed25519/amd64-64-24k/: choose_t.S  compat.h  consts.S  crypto_int32.h  crypto_int64.h  crypto_sign.h  ed25519.h  fe25519.h  fe25519_add.S  fe25519_batchinvert.c  fe25519_freeze.S  fe25519_mul.S  fe25519_square.S  fe25519_sub.S  ge25519.h  ge25519_add_p1p1.S  ge25519_base_niels.data  ge25519_base_niels_smalltables.data  ge25519_base_slide_multiples.data  ge25519_batchpack.c  ge25519_dbl_p1p1.S  ge25519_double_scalarmult.c  ge25519_nielsadd2.S  ge25519_nielsadd_p1p1.S  ge25519_p1p1_to_p2.S  ge25519_p1p1_to_p3.S  ge25519_pnielsadd_p1p1.S  ge25519_scalarmult_base.c  heap_rootreplaced.S  heap_rootreplaced_1limb.S  heap_rootreplaced_2limbs.S  heap_rootreplaced_3limbs.S  index_heap.h  sc25519.h  sc25519_add.S  sc25519_barrett.S  sc25519_lt.S  sc25519_mul.c  sc25519_sub_nored.S  ull4_mul.S
ed25519/ed25519-donna/: curve25519-donna-32bit.h  curve25519-donna-64bit.h  curve25519-donna-helpers.h  curve25519-donna-sse2.h  ed25519-donna-32bit-tables.h  ed25519-donna-64bit-tables.h  ed25519-donna-impl-base.h  ed25519-donna-impl-sse2.h  ed25519-donna-portable-identify.h  ed25519-donna.h  ed25519-hash-custom.h  ed25519-randombytes-custom.h  modm-donna-32bit.h  modm-donna-64bit.h
ed25519/ref10/: crypto_hash_sha512.h  crypto_sign.h  crypto_uint32.h  crypto_uint64.h  crypto_verify_32.h  ed25519.h  ed25519_ref10.h  fe.h  fe_batchinvert.c  fe_isnonzero.c  ge.h  ge_p3_batchtobytes.c  ge_p3_tobytes.c  keypair.c  randombytes.h  sign.c
